assets/_dev/src/scss/components/_header.scss
/* Header + Navbar */
.header {
  &__nav {
    position         : fixed;
    width            : 100%;
    z-index          : 10;
    background-color : $white;
    display          : flex;
    top              : 0;
    align-items      : center;
    justify-content  : space-between;
    box-shadow       : $boxShadowOut;
    transition       : all .3s ease-in-out;
    height           : 100px;
    @include max-width($screenMd) {
      display : none;
    }


    &.transparent {
      background-color : transparent;
      box-shadow       : none;
      transition       : all .3s ease-in-out;

      .menu-left, .menu-right {
        li a {
          color : $white !important;

          &::after {
            background-color : $white !important;
          }
        }
      }
    }

    &.down {
      height : 80px;
    }
  }

  &__mobile {
    display : none;
    @include max-width($screenMd) {
      display : flex;
    }
  }

  &__menu {
    &.menu-left {
      margin-left : 5em;
      display     : flex;
      align-items : center;
      @include max-width($screenLg) {
        margin-left : 1em;
      }

      li {
        a {
          @include nav-link;
        }

        &:not(:last-child) {
          margin-right : 1.5em;
        }
      }
    }

    &.menu-right {
      margin-right : 5em;
      display      : flex;
      align-items  : center;
      @include max-width($screenLg) {
        margin-right : 1em;
      }

      li {
        a {
          &.dropdown-item {
            color : $white;
          }

          &.link {
            @include nav-link;
          }
        }

        &.dropdown {
          position : relative;
          padding  : 1rem 0;

          .dropdown-icon{
            margin-left: 1rem;
            margin-right: 0;
          }

          &:hover {
            .menu-dropdown {
              opacity    : 1;
              visibility : visible;
              transform  : translateY(0);
            }
          }
        }
        &:not(:last-child) {
          margin-right : 1.5em;
        }
      }

      .menu-dropdown {
        position         : absolute;
        top              : 100%;
        left             : 0;
        width            : 100%;
        background-color : white;
        border-radius    : 10px;
        box-shadow       : 0px 2px 4px rgba(0, 0, 0, 0.45);
        box-sizing       : border-box;
        overflow         : hidden;
        opacity          : 0;
        transition       : all .2s ease-in-out;
        visibility       : hidden;
        transform        : translateY(-10px);

        li {
          margin-right: 0;

          a {
            margin          : 0 !important;
            display         : flex;
            justify-content : flex-start;
            align-items     : center;
            color           : #787878 !important;
            font-size       : 1rem;
            font-family     : $mainFont;
            text-decoration : none;
            padding         : 0.9rem 1rem;
            flex            : 1;
            transition      : all .3s ease-in-out;

            &:hover {
              color            : $primaryDark !important;
              background-color : #F6F6f6;
            }

            i {
              margin-right : 1rem;
            }
          }

          &.--logout {
            a {
              color : $redDark !important;
            }

            i {
              background              : $redDark;
              background-clip         : border-box;
              -webkit-background-clip : text;
              -webkit-text-fill-color : transparent;
            }
          }

          &:not(:last-child) {
            border-bottom : 1px solid #E6E6E6;
          }
        }
      }
    }
  }

}

.header {
  &__mobile {
    position   : fixed;
    width      : 100%;
    box-sizing : border-box;
    justify-content  : space-between;
    align-items      : center;
    background-color : transparent;
    @include px(2);
    @include py(1);

    &__logo {
      h1 {
        color    : $white;
        position : relative;

      }
    }

    &__menu {


      &:hover {
        span {
          width : 45px;

          &:first-child {
            width : 45px;
          }
        }
      }

      &-btn {
        cursor     : pointer;
        padding    : .5rem;
        box-sizing : border-box;
        position   : relative;
        z-index    : 115;

        span {
          display          : block;
          width            : 35px;
          height           : 6px;
          background-color : $white;
          margin           : 7px 0;
          border-radius    : 15px;
          transition       : all .3s ease-in-out;

          &:first-child {
            width : 20px;
          }

          &:last-child {
            width : 45px;
          }
        }

        &.--opened {
          span {
            width            : 45px;
            background-color : $primaryLight;
          }
        }
      }


      &-content {
        position         : fixed;
        top              : 0;
        left             : 0;
        width            : 100%;
        height           : 100vh;
        background-color : $white;
        z-index          : 100;
        transform        : translateX(-100%);
        transition       : all .3s ease-in-out;

        &.--open {
          transform : translateX(0);
        }
      }
    }
  }
}

